# insurance-dro

./: README.md  pyproject.toml
notebooks/: benchmark_dro.py
src/insurance_dro/: __init__.py  cvar.py  erm.py  wasserstein.py
tests/: test_dro.py
