[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-dro"
version = "0.1.0"
description = "Distributionally robust optimisation for insurance premium setting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_dro"]
